[gd_scene load_steps=8 format=3 uid="uid://cyhqkmqbamye2"]

[ext_resource type="Script" path="res://LoginPage.gd" id="1_r4ltg"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://BG.tscn" id="2_7yupd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iigvd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eegys"]

[sub_resource type="ImageTexture" id="ImageTexture_hgb7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cxi7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qllus"]

[node name="LoginPage" type="Node2D"]
script = ExtResource("1_r4ltg")

[node name="Temp" type="TouchScreenButton" parent="."]
position = Vector2(1040, 65)
scale = Vector2(10, 5)
shape = SubResource("RectangleShape2D_iigvd")

[node name="BG" parent="." instance=ExtResource("2_7yupd")]

[node name="UserID" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 275.0
offset_top = 170.0
offset_right = 875.0
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Label" type="Sprite2D" parent="UserID"]
position = Vector2(262, 108)

[node name="InputBox" type="LineEdit" parent="UserID"]
layout_mode = 2
max_length = 2

[node name="Password" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 275.0
offset_top = 260.0
offset_right = 875.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="Label" type="Sprite2D" parent="Password"]
position = Vector2(262, 108)

[node name="InputBox" type="LineEdit" parent="Password"]
layout_mode = 2

[node name="LogIn" type="TouchScreenButton" parent="."]
position = Vector2(575, 410)
scale = Vector2(13, 3)
shape = SubResource("RectangleShape2D_eegys")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 445.0
offset_top = 460.0
offset_right = 705.0
offset_bottom = 520.0

[node name="or" type="Sprite2D" parent="HBoxContainer"]

[node name="SignUp" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2(180, 30)
scale = Vector2(8, 2.5)
texture_normal = SubResource("ImageTexture_hgb7g")
shape = SubResource("RectangleShape2D_7cxi7")

[node name="ForgottenPassword" type="TouchScreenButton" parent="."]
position = Vector2(575, 570)
scale = Vector2(25, 3)
shape = SubResource("RectangleShape2D_qllus")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(562, 492)
scale = Vector2(5, 5)
points = PackedVector2Array(-0.199997, -0.400002, 24.2, -0.400002)
default_color = Color(0, 0, 0, 1)

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(515, 574)
scale = Vector2(5, 5)
points = PackedVector2Array(-0.199997, -0.400002, 24.2, -0.400002)
default_color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Temp" to="." method="_on_next_pressed"]
[connection signal="pressed" from="HBoxContainer/SignUp" to="." method="_on_sign_up_pressed"]
[connection signal="pressed" from="ForgottenPassword" to="." method="_on_forgotten_password_pressed"]
